--- a/Portfolio-Project/index.html
+++ b/Portfolio-Project/index.html
@@ -2,6 +2,13 @@
 <html>
 
 <head>
+    <!-- Meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Portfolio Site</title>
+
+    <!-- Styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,400&amp;subset=latin-ext" rel="stylesheet">
